Test/InvalidFiles/PgCompletionist/Local1.xaml
<local:Test xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
            xmlns:local="clr-namespace:PgCompletionist"
            local:Property="Fail">
</local:Test>
